Fix spacing for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -473,7 +473,6 @@ Products
 
 .product {
   margin-bottom: 2rem;
-  padding-right: 2rem;
 }
 
 .product-img {
@@ -524,7 +523,7 @@ Services
 =============
 */
 .services .section-center {
-  padding: 4rem 2rem 4rem 4rem;
+  padding: 4rem auto;
 }
 
 .services-title {
